# QNMDsol

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md  使用说明.md
src/: brain_utils.rs  engine.rs  gui.rs  main.rs  openbci.rs  recorder.rs  types.rs  visualizer.rs  vjoy.rs  waveform.rs
src/drivers/: buffer.rs  error.rs  fft.rs  mod.rs  pipeline.rs  plot.rs  resistance_detection.rs  source.rs
src/waveform-rs/: Cargo.toml  README.md
src/waveform-rs/examples/: egui_viewer.rs
src/waveform-rs/src/: buffer.rs  channel.rs  config.rs  filter.rs  lib.rs  view.rs
trainer/: collect_data.py  export.py  requirements.txt  run_all.bat  train_model.py
