[package]
name = "qnmd_sol"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心工具
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# 数学库
ndarray = "0.15"

# 动态库加载器
libloading = "0.8"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GUI (我们将 eframe 升级一个小版本，通常能解决旧版 bug，但也为了兼容性保留 0.x)
# 如果你不想升级，保持 0.24 也可以，但必须加下面的 winapi
eframe = "0.24"
egui_plot = "0.24"

# ===关键修复：强制开启 Windows API 功能===
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
