[package]
name = "neurostick"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- 核心工具 ---
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
# [新增] 用于新模块的错误处理
thiserror = "1.0"

# --- 硬件交互 ---
serialport = "4.2"

# --- 数学与信号处理 ---
ndarray = "0.15"
# [新增] 快速傅里叶变换 (FFT)，这是新模块的核心算法依赖
rustfft = "6.1"

# --- 动态库加载 ---
libloading = "0.8"

# --- 序列化 ---
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

# --- 图形界面 (Neurostick 主界面 ---
eframe = "0.24"
egui_plot = "0.24"
rand = "0.8"

# --- [新增] 新模块自带的绘图依赖 ---
# 为了确保你复制过来的代码能直接编译通过，我们需要加上这些。
# 虽然 Neurostick 主要用 egui 画图，但如果你的驱动里有生成图片的代码，就必须要有它们。
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "ttf"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# --- Windows API ---
winapi = { version = "0.3.9", features = ["winuser", "windef"] }
